@@ -29,12 +29,12 @@ Changes in release 4.0:
 * terminal-dependent configuration of GNU readline
 
 [3.8g]
+* NEW grid options: {layerdefault | front | back}
 * NEW set style [data | function] filledcurves [options]
       plot ... with filledcurves [options]
 * NEW autoscale options: `fix`, `keepfix`
 
 [3.8f]
-  Note: Options are not yet implemented -- *YOU* may contribute
 * NEW axis for the color box
 * NEW pipes under Windows (if compiled by MingW)
 
